[tool.poetry]
name = "steiner_weasels"
version = "0.1.0"
description = ""
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
pysnooper = "^1.2.0"
flake8 = "^6.1.0"
yapf = "^0.40.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
